--- a/jd.html
+++ b/jd.html
@@ -33,11 +33,11 @@ p1{
 font-family: Arial, Helvetica, sans-serif;
 font-size: 25px;
 text-decoration: none;
-color: rgb(153, 130, 238);
+color: blue;
 }
 p2{
 font-size: 26px;
-color: rgb(153, 130, 238);
+color:red;
 }
 .profile-picture{
 width: 90px;
@@ -101,8 +101,8 @@ padding-left: 20px;
 <header>
 <div class="header-content">
 <!--Add your profile picture here-->
-<img src="image.jpg" alt="Your Profile Picture" class="profile-picture">
-<h1>Bhuvanesh S</h1>
+<img src="C:\xampp\htdocs\abinaya\girl.jpg" alt="Your Profile Picture" class="profile-picture">
+<h1>Abinaya M</h1>
 <p>Passionate on Education...</p>
 </div>
 </header>
@@ -119,13 +119,13 @@ padding-left: 20px;
 <section id="about">
 <div class="section-content">
 <h2>About me</h2>
-<p1>Hello Everyone! This is Bhuvanesh, I am Final Year Student..</p1>
+<p1>Hello Everyone! This is Abinaya, I am Final Year Student..</p1>
 </div>
 </section>
 <section id="education">
 <div class="section-content">
 <h2>Education </h2>
-<p2>Alangulam Government College-CS</p2>
+<p2>Kamarajar Government Art's College-CS</p2>
 <table border="1">
 <tr>
 <th>Degree</th>
@@ -134,17 +134,17 @@ padding-left: 20px;
 </tr>
 <tr>
 <th>10TH</th>
-<th>SHALOM SCHOOL</th>
+<th>T.D.T.A Middle School</th>
 <th>Null</th>
 </tr>
 <tr>
 <th>12TH</th>
-<th>AVVAIYAR</th>
+<th>St.Micheal Girl's Heigher Secondary School</th>
 <th>CS</th>
 </tr>
 <tr>
 <th>BSC</th>
-<th>GOVERNMENT ARTS AND SCIENCE COLLEGE FOR WOMEN</th>
+<th>Kamarajar Government Art's College</th>
 <th>CS</th>
 </tr>
 </table>
@@ -178,12 +178,12 @@ padding-left: 20px;
 <center>
 <div class="section-content">
 <h2>Resume</h2>
-<a href="Bhuvanesh S.docx" class="download-button">Download CV</a>
+<a href="Abinaya M.docx" class="download-button">Download CV</a>
 </div>
 </center>
 </section>
 <footer>
-<p>&copy;2023 Bhuvanesh S</p>
+<p>&copy;2023 Abinaya M</p>
 </footer>
 <script>
 document.querySelectorAll('a[href^="#"]').forEach(anchor => {
